--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
 	<!-- FLYOUT END -->
 	<!-- FLYOUT END -->	
 	
-	
+	<section id="flyoutMobile" style="background:#D3D1C2;">
+        <a href="http://leadbyexample.tamu.edu" style="padding: 5px; font-family: Georgia,Cambria,Times,serif; color:#500000; font-style:italic; width:100%; display:block; text-align:center;">Lead by Example</a>
+    </section>
 
     	
 	<div class="container-table" id="landingPage">
