--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
         </div>
     </div>
 </nav>
-
+<div class="container">
+<div class="container-fluid valign">	
 <div class="off-canvas-wrap"> 
 	<div class="container">
 
@@ -196,6 +197,7 @@
 					
 			</section>
 		</div>
+	</div>
     </div>
 
 <div id="aboutMe">
