--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
 <!--#9C6B23-->
 <script id="por-template" type="text/html">
-    <div class="col-md-3">
+    <div class="col-xs-12 col-sm-6 col-lg-4">
         <div class="tile">
             <div>
                 <div class="tile-footer text-center" style="padding:4px;">
