--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </div>
 </div>
 
-<div class="container-fluid" style="background:black; color:white !important;">
+<div class="container-fluid" style="background:black; color:white !important; overflow:hidden">
     <div class="row text-center" style="padding-top:10px">
         <div class="col-sm-3 col-xs-6">
             <p><span class="glyphicon glyphicon-earphone"></span> Phone</p>
@@ -271,10 +271,7 @@
             <p><span class="glyphicon glyphicon-send"></span> E-mail</p>
             <p style="margin-bottom:2px;">sumit.binnani@gmail.com</p>
         </div>
-        <div class="col-sm-3 col-xs-6">
-            <p><span class="glyphicon glyphicon-leaf"> Web</p>
-            <p style="margin-bottom:2px;"><a href="http://sumitbinnani.github.io">http://sumitbinnani.github.io</a></p>
-        </div>
+    
     </div>
 
 
