--- a/index.html
+++ b/index.html
@@ -271,7 +271,10 @@
             <p><span class="glyphicon glyphicon-send"></span> E-mail</p>
             <p style="margin-bottom:2px;">sumit.binnani@gmail.com</p>
         </div>
-    
+         <div class="col-sm-3 col-xs-6">
+            <p><span class="glyphicon glyphicon-leaf"> Web</p>
+            <p style="margin-bottom:2px;"><a href="http://sumitbinnani.github.io">http://sumitbinnani.github.io</a></p>
+        </div>
     </div>
 
 
