--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </div>
 </div>
 
-<div class="container-fluid" style="background:black; color:white !important; overflow:hidden">
+<div class="container-fluid" style="background:black; color:white !important;">
     <div class="row text-center" style="padding-top:10px">
         <div class="col-sm-3 col-xs-6">
             <p><span class="glyphicon glyphicon-earphone"></span> Phone</p>
@@ -277,9 +277,9 @@
         </div>
     </div>
 
-
-
 </div>
+
+
 
 
 <script id="workExp-template" type="text/html">
