--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-++<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -305,7 +305,7 @@
     </div>
 </div>
 
-<div class="container-fluid" style="background:black; color:white !important; overflow:hidden">
+<div class="container-fluid" style="background:black; color:white !important;">
     <div class="row text-center" style="padding-top:10px">
         <div class="col-sm-3 col-xs-6">
             <p><span class="glyphicon glyphicon-earphone"></span> Phone</p>
