--- a/index.html
+++ b/index.html
@@ -111,45 +111,12 @@
 </nav>
 
 
-<div class="container-table" id="landingPage">
-    <div class="effect1"></div>
-    <div class="container-fluid valign">
-        <div class="row text-center">
-            <div class="col-md-4" style="float:none; margin:auto;">
-
-                <div class="card hovercard jVCenter">
-                    <div class="cardheader"></div>
-                    <div class="avatar">
-                        <img alt="" src="img/saquib.jpg">
-                    </div>
-                    <div class="info">
-                        <div class="title">
-                            <h2><a target="_blank" href="http://saquib-ali-khan.github.io">Saquib Ali Khan</a></h2>
-                        </div>
-                        <div class="desc">Curious Learner</div>
-                        <div class="desc">Passionate Developer</div>
-                        <div class="desc">Tech Geek</div>
-                    </div>
-                    <div class="bottom">
-                        <a class="btn btn-info btn-sm" href="https://www.linkedin.com/in/saquib-ali-khan-56b8b9116/">
-                            <i class="fa fa-linkedin"></i>
-                        </a>
-                        <a class="btn btn-default btn-sm" href="https://github.com/saquib-ali-khan">
-                            <i class="fa fa-github"></i>
-                        </a>
-                        <a class="btn btn-warning btn-sm" href="https://plus.google.com/u/0/108158385319641670856">
-                            <i class="fa fa-google"></i>
-                        </a>
-                        <a class="btn btn-primary btn-sm" href="https://www.facebook.com/alikhansaquib">
-                            <i class="fa fa-facebook"></i>
-                        </a>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-    </div>
+<div  id="landingPage">
+    <video autoplay="autoplay" id="fullscreen_video" loop="loop" style="@media only screen and (min-width: 43.913em)
+#fullscreen_video {
+    display: block;
+    width: 100%;
+} " muted="muted" preload="none" src="https://player.vimeo.com/external/252376941.hd.mp4?s=967f8d072f08769209449a897a6c7c28f9896977&amp;profile_id=174">Texas A&amp;M students walking through Academic Plaza</video>
 </div>
 
 <div id="aboutMe">
