--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
 <div  id="landingPage">
-    <video autoplay="autoplay" id="fullscreen_video" loop="loop" style="@media only screen and (min-width: 20px)
+    <video autoplay="autoplay" id="fullscreen_video" loop="loop" style="@media only screen and (min-width: 20px) and (max-width: 767px)
 #fullscreen_video {
     display: block;
     width: 100%;
