--- a/index.html
+++ b/index.html
@@ -112,11 +112,7 @@
 
 
 <div  id="landingPage">
-    <video autoplay="autoplay" id="fullscreen_video" loop="loop" style="@media only screen and (min-width: 20px) and (max-width: 767px)
-#fullscreen_video {
-    display: block;
-    width: 50%!important;
-} " muted="muted" preload="none" src="https://player.vimeo.com/external/252376941.hd.mp4?s=967f8d072f08769209449a897a6c7c28f9896977&amp;profile_id=174">Texas A&amp;M students walking through Academic Plaza</video>
+    <video autoplay="autoplay" id="fullscreen_video" loop="loop" muted="muted" preload="none" src="https://player.vimeo.com/external/252376941.hd.mp4?s=967f8d072f08769209449a897a6c7c28f9896977&amp;profile_id=174">Texas A&amp;M students walking through Academic Plaza</video>
 </div>
 
 <div id="aboutMe">
