--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	">
                   <div class="col-md-10 col-md-offset-1 text-center">
                     <h2 class="font-family-alt font-weight-900 letter-spacing-2 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-5" style="font-size:70px; font-color:red;">
-                      <span class="text-base-color"><b>Welcome to</b></span><b> ENCOMIUM 2K18</b>
+                      <span class="text-base-color">Welcome to</span><b> ENCOMIUM 2K18</b>
                     </h2>
                     <br>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3" style="font-size:50px">
