--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -53,7 +53,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#landingPage" style="color:white">Saquib Ali Khan</a>
+            <a class="navbar-brand" href="#landingPage" style="color:white"><b>IEEE JMI</b></a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
