--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <i class="fa fa-cogs fa-3x" aria-hidden="true"></i>
                     <h4>Volunteer With Us</h4>
                     
-                    <h4><a target="_blank" href="https://github.com/saquib-ali-khan/Information-Diffusion-and-node-ranking-in-Social-Networks"><span class="label label-info">Click Here</span></a></h4>
+                    <h4><a target="_blank" href="./index.html"><span class="label label-info">Click Here</span></a></h4>
 
                 </div>
             </div>
@@ -249,7 +249,7 @@
                     <i class="fa fa-bar-chart fa-3x" aria-hidden="true"></i>
                     <h4>Event Participation</h4>
                     
-                    <h4><a target="_blank" href="https://github.com/saquib-ali-khan"><span class="label label-info">Click Here</span></a></h4>
+                    <h4><a target="_blank" href="./index.html"><span class="label label-info">Click Here</span></a></h4>
                 </div>
             </div>
 			
