--- a/index.html
+++ b/index.html
@@ -304,22 +304,21 @@
 
 <div id ="contact" class="container-fluid" style="background:black; color:white !important;">
     <div class="row text-center" style="padding-top:10px">
-        <div class="col-sm-3 col-xs-6">
+        <div class="col-sm-4 col-xs-12">
             <p><span class="glyphicon glyphicon-earphone"></span> Phone</p>
             <p style="margin-bottom:2px;">+91 9643491977</p>
         </div>
-        <div class="col-sm-3 col-xs-6">
+        <div class="col-sm-4 col-xs-12">
             <p><span class="glyphicon glyphicon-home"></span> Location</p>
-            <p style="margin-bottom:2px;">SRK Hostel, Jamia Millia Islamia University, Jamia Nagar, New Delhi-25</p>
-        </div>
-        <div class="col-sm-3 col-xs-6">
+			<a href="https://www.google.co.in/maps/place/Faculty+of+Engineering+and+Technology/@28.5577763,77.2663285,14z/data=!4m21!1m15!4m14!1m6!1m2!1s0x390ce3f279740be3:0x3a2e6577270486!2zU3VraGRldiBWaWhhciDgpLjgpYHgpJbgpKbgpYfgpLUg4KS14KS_4KS54KS-4KSw!2m2!1d77.2762863!2d28.5570172!1m6!1m2!1s0x390ce3f34a47c729:0x6a6dc45ff88d2ec5!2sfaculty+of+engineering+%26+technology+-+jamia+millia+islamia!2m2!1d77.279463!2d28.560169!3m4!1s0x390ce3f34a47c729:0x6a6dc45ff88d2ec5!8m2!3d28.560169!4d77.279463">
+            <p style="margin-bottom:2px;">Faculty of Engineering & Technology, Jamia Millia Islamia, Jamia Nagar, New Delhi-25</p>
+            <a/>
+		</div>
+        <div class="col-sm-4 col-xs-12">
             <p><span class="glyphicon glyphicon-send"></span> E-mail</p>
             <p style="margin-bottom:2px;">alikhansaquib@gmail.com</p>
         </div>
-        <div class="col-sm-3 col-xs-6">
-            <p><span class="glyphicon glyphicon-leaf"> Web</p>
-            <p style="margin-bottom:2px;"><a href="http://saquib-ali-khan.github.io">http://saquib-ali-khan.github.io</a></p>
-        </div>
+     
     </div>
 </div>
 
