--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                   <div class="col-md-10 col-md-offset-1 text-center">
                     <h2 class="font-family-alt font-weight-900 letter-spacing-2 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-5" style="font-size:60px; font-color:red; color: white;
     text-shadow: 2px 2px 4px #000000;">
-                      <span class="text-base-color">Welcome to</span><b> ENCOMIUM 2K18</b>
+                      <span class="text-base-color">Welcome to</span><b> ENCOMIUM 2k18</b>
                     </h2>
                     <br>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3" style="font-size:50px ;color: white;
@@ -170,7 +170,7 @@
 <div id="aboutMe">
     <div class="container">
         <div class="row">
-            <div class="page-header"><h1>About Me</h1></div>
+            <div class="page-header"><h1>About</h1></div>
             <div class="col-md-7">
                 <h2>Biography</h2>
                 <p>
