--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#aboutMe"><b>About</b></a></li>
+                <li><a href="#aboutMe"><b>About Us</b></a></li>
 				<li><a href="#workExperience"><b>Events</b></a></li>
 				<li><a href="#projects"><b>Participate</b></a></li>
                 <!--<li><a href="#skills">Skills</a></li>-->
@@ -170,7 +170,7 @@
 <div id="aboutMe">
     <div class="container">
         <div class="row">
-            <div class="page-header"><h1>About</h1></div>
+            <div class="page-header"><h1>About Us</h1></div>
             <div class="col-md-7">
                 <h2>Biography</h2>
                 <p>
@@ -227,7 +227,7 @@
     </div>
 </div>
 
-<div id="projects" style="padding-bottom:20px;">
+<div id="projects">
     <div class="page-header">
         <h1>Participate</h1>
     </div>
@@ -305,17 +305,17 @@
 <div id ="contact" class="container-fluid" style="background:black; color:white !important;">
     <div class="row text-center" style="padding-top:10px">
         <div class="col-sm-4 col-xs-12">
-            <p><span class="glyphicon glyphicon-earphone"></span> Phone</p>
+            <p><span class="glyphicon glyphicon-earphone"></span><u>Phone</u></p>
             <p style="margin-bottom:2px;">+91 9643491977</p>
         </div>
         <div class="col-sm-4 col-xs-12">
-            <p><span class="glyphicon glyphicon-home"></span> Location</p>
+            <p><span class="glyphicon glyphicon-home"></span><u>Location</u></p>
 			<a href="https://www.google.co.in/maps/place/Faculty+of+Engineering+and+Technology/@28.5577763,77.2663285,14z/data=!4m21!1m15!4m14!1m6!1m2!1s0x390ce3f279740be3:0x3a2e6577270486!2zU3VraGRldiBWaWhhciDgpLjgpYHgpJbgpKbgpYfgpLUg4KS14KS_4KS54KS-4KSw!2m2!1d77.2762863!2d28.5570172!1m6!1m2!1s0x390ce3f34a47c729:0x6a6dc45ff88d2ec5!2sfaculty+of+engineering+%26+technology+-+jamia+millia+islamia!2m2!1d77.279463!2d28.560169!3m4!1s0x390ce3f34a47c729:0x6a6dc45ff88d2ec5!8m2!3d28.560169!4d77.279463">
             <p style="margin-bottom:2px;">Faculty of Engineering & Technology, Jamia Millia Islamia, Jamia Nagar, New Delhi-25</p>
             <a/>
 		</div>
         <div class="col-sm-4 col-xs-12">
-            <p><span class="glyphicon glyphicon-send"></span> E-mail</p>
+            <p><span class="glyphicon glyphicon-send"></span><u>E-mail</u></p>
             <p style="margin-bottom:2px;">alikhansaquib@gmail.com</p>
         </div>
      
