--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -17,6 +17,42 @@
     <link href="css/skills.css" rel="stylesheet">
     <link href="css/timeline.css" rel="stylesheet">
 	
+	 <script type="application/ld+json">
+			{
+				"@context": "http://www.schema.org",
+				"@type": "person",
+				"name": "Saquib Ali khan",
+				"jobTitle": "Student",
+				"url": "https://saquib-ali-khan.github.io",
+				"image": "https://scontent.fmaa1-1.fna.fbcdn.net/hphotos-xfa1/v/t1.0-9/10409432_10201647346819338_741682520973205992_n.jpg?oh=4c6d16eb67e229054bf0219f183f40df&oe=571EC427",
+				"sameAs" : [
+					"https://www.facebook.com/alikhansaquib",
+					"https://www.linkedin.com/in/saquib-ali-khan-56b8b9116/",
+					"https://github.com/saquib-ali-khan",
+					"https://plus.google.com/u/0/108158385319641670856"
+				],
+				"address": {
+					"@type": "PostalAddress",
+					"streetAddress": "Room no. 207, SRK Boy's Hostel, Jamia Millia Islamia University, New Delhi",
+					"addressLocality": "Delhi",
+					"addressRegion": "New Delhi",
+					"postalCode": "110025",
+					"addressCountry": "India"
+				},
+				"email": "alikhansaquib@gmail.com",
+				"telephone": "+91 9643491977",
+				"birthDate": "1993-02-08"
+			}
+
+
+    </script>
+
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+	
+	
 	  <!-- Bootstrap -->
   <link rel="stylesheet" href="https://d33wubrfki0l68.cloudfront.net/css/1e22e4282faf19ae853d29c8e78e83a00c13b4b0/res/css/bootstrap.min.css">
 
@@ -256,6 +292,16 @@
     </div>
     <!-- //.container -->
   </section>
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+        integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+        crossorigin="anonymous"></script>
+<script src="js/jquery.matchHeight-min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
+<script type="text/javascript" src="js/jquery.jcarousel.min.js"></script>
+<script src="js/script.js"></script>
+  
   
   </body>
   
