--- a/index.html
+++ b/index.html
@@ -141,20 +141,20 @@
 	">
                   <div class="col-md-10 col-md-offset-1 text-center">
                     <h2 class="font-family-alt font-weight-900 letter-spacing-2 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-5" style="font-size:60px; font-color:red; color: white;
-    text-shadow: 2px 2px 4px #000000;">
+    text-shadow: 2px 2px 4px #000000; padding-left:15px">
                       <span class="text-base-color">Welcome to</span><b> ENCOMIUM 2k18</b>
                     </h2>
                     <br>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3" style="font-size:50px ;color: white;
-    text-shadow: 2px 2px 4px #000000;">
+    text-shadow: 2px 2px 4px #000000; padding-left:15px">
                       March 23-25, 2018
                     </h3>
                     <p class="font-family-alt text-white sm-title-small title-medium" style="font-size:20px; color: white;
-    text-shadow: 2px 2px 4px #000000;">
+    text-shadow: 2px 2px 4px #000000; padding-left:15px">
                       <b>at</b>
                     </p>
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large" style="font-size:20px; color: white;
-    text-shadow: 2px 2px 4px #000000;">
+    text-shadow: 2px 2px 4px #000000; padding-left:15px">
                       <b>Jamia Millia Islamia</b>
                     </h4>
                     <!-- <br>
