--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -94,14 +94,14 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#aboutMe"><b>About Us</b></a></li>
-				<li><a href="#workExperience"><b>Events</b></a></li>
-				<li><a href="#projects"><b>Participate</b></a></li>
+                <li><a href="../index.html"><b>About Us</b></a></li>
+				<li><a href="../index.html"><b>Events</b></a></li>
+				<li><a href="../index.html"><b>Participate</b></a></li>
                 <!--<li><a href="#skills">Skills</a></li>-->
-                <li><a href="sponsors/index.html"><b>Our Sponsors</b></a></li>
-                <li><a href="#pors"><b>Positions of Responsibilities</b></a></li>
-                <li><a href="#extraCurriculars"><b>Volunteers</b></a></li>
-				 <li><a href="#contact"><b>Contact Us</b></a></li>
+                <li><a href="./index.html"><b>Our Sponsors</b></a></li>
+                <li><a href="../index.html"><b>Positions of Responsibilities</b></a></li>
+                <li><a href="../index.html"><b>Volunteers</b></a></li>
+				 <li><a href="../index.html"><b>Contact Us</b></a></li>
 				
             </ul>
         </div>
