--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 
 <div  id="landingPage" >
-
+<div class="effect1"></div>
 <div class="row" style="
     margin-left: -15px;
     margin-right: -15px; padding-top: 100px;
@@ -141,12 +141,12 @@
 	">
                   <div class="col-md-10 col-md-offset-1 text-center">
                     <h2 class="font-family-alt font-weight-900 letter-spacing-2 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-5" style="font-size:60px; font-color:red; color: white;
-    text-shadow: 2px 2px 4px #000000; padding-left:15px">
-                      <span class="text-base-color">Welcome to</span><b> ENCOMIUM 2k18</b>
+    text-shadow: 2px 2px 4px #000000; padding-left:15px  font-family: -webkit-body;">
+                      <span class="text-base-color">Welcome to</span><b style="font-family: -webkit-body;"> ENCOMIUM 2k18</b>
                     </h2>
                     <br>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3" style="font-size:50px ;color: white;
-    text-shadow: 2px 2px 4px #000000; padding-left:15px">
+    text-shadow: 2px 2px 4px #000000; padding-left:15px;  font-family: -webkit-body;">
                       March 23-25, 2018
                     </h3>
                     <p class="font-family-alt text-white sm-title-small title-medium" style="font-size:20px; color: white;
