--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
 </div>
 
 <div id="projects">
+<div class="effect1"></div>
     <div class="page-header">
         <h1>Participate</h1>
     </div>
@@ -283,6 +284,7 @@
 </div>
 
 <div id="extraCurriculars">
+<div class="effect1"></div>
     <div class="container-fluid">
         <div class="row">
             <div class="page-header"><h1>Our Volunteers</h1></div>
