--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
     margin-left: -15px;
     margin-right: -15px; padding-top: 100px;
     padding-bottom: 200px;
+	padding-right:-25px;
 	">
-                  <div class="col-md-10 col-md-offset-1 text-center">
+                  <div class="col-md-10 col-md-offset-1 text-center" style="padding-right:-25px;">
                     <h2 class="font-family-alt font-weight-900 letter-spacing-2 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-5" style="font-size:55px; font-color:red; color: white;
     text-shadow: 2px 2px 4px #000000; padding-left:15px  font-family: -webkit-body;">
                       <span class="text-base-color">  Welcome to</span><b style="font-family: -webkit-body;"> ENCOMIUM 2k18</b>
@@ -284,7 +285,7 @@
 </div>
 
 <div id="extraCurriculars">
-<div class="effect1"></div>
+
     <div class="container-fluid">
         <div class="row">
             <div class="page-header"><h1>Our Volunteers</h1></div>
@@ -328,7 +329,7 @@
 <script id="workExp-template" type="text/html">
     <li data-bind="css: $index()%2==0 ? '' : 'timeline-inverted'">
         <a class="btn btn-warning timeline-badge"><i
-                data-bind="css: type=='Research' ? 'fa fa-flask': type=='Teaching'? 'fa fa-book':'fa fa-briefcase'"></i></a>
+                data-bind="css: 'fa fa-database'"></i></a>
         <div class="timeline-panel">
             <div class="timeline-heading">
                 <p data-bind="text:jobTitle" style="display:inline; font-weight:900"></p>,
