--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <br>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3" style="font-size:50px ;color: white;
     text-shadow: 2px 2px 4px #000000; padding-left:15px;  font-family: -webkit-body;">
-                      March 23-25, 2018
+                      March 23 - 25
                     </h3>
                     <p class="font-family-alt text-white sm-title-small title-medium" style="font-size:20px; color: white;
     text-shadow: 2px 2px 4px #000000; padding-left:15px">
