--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                     <p data-bind="html: $data.organization"></p>
                 </div>
                 <div class="tile-header">
-                    <img width="200px" height="200px"  style="border-radius:15%; border:2px solid #fff; box-shadow: 0px -10px 30px #ccc; " data-bind="attr:{src: $data.description}" />
+                    <img width="200px" height="200px"  style="border-radius:15%; border:2px solid #000; box-shadow: 0px -10px 30px #ccc; " data-bind="attr:{src: $data.description}" />
 					</div>
             </div>
         </div>
