--- a/index.html
+++ b/index.html
@@ -169,21 +169,23 @@
 	</div>
 
 <div id="aboutMe">
-    <div class="container">
+    <div class="container"  style="background-color:white;
+            box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.175); padding-bottom:45px" >
         <div class="row">
-            <div class="page-header"><h1>About Us</h1></div>
-            <div class="col-md-7">
-                <h2>Biography</h2>
+            <div class="page-header" style="margin-left:20px"><h1> | About Us</h1></div>
+            <div class="col-md-6" style="margin-left:20px" >
+                <h2>Encomium</h2>
                 <p>
-                    I am a final year Undergrad at Jamia Millia Islamia University, New Delhi, pursuing bachelors in 
-					Computer Science & Engineering.
+                    Encomium, the intercollegiate annual techno-cultural fest of IEEE JMI chapter is an event with plethora
+					of competitions lined up for participants. As the years progressed, it's dynamism and quest for perfection has
+					attracted enthusiasts in large numbers.
                 </p>
                 <p>
-                    Interested in technologies... Like to explore Data Science and Deep Learning in my free
-                    time. Passionate about travelling and reading, and enjoy eating, playing Chess and driving.
+                    After our massive success last year, we are back, bigger, better and bolder, and we invite you to be a part 
+					of our annual extravaganza.
                 </p>
             </div>
-            <div class="col-md-4 col-md-offset-1">
+            <div class="col-md-5 col-md-offset-1" style="margin-left:65px; margin-right:-15px; box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.175)" >
                 <h2>Areas of Interests</h2>
                 <ul>
                     <li>Social Network Analysis</li>
@@ -330,7 +332,7 @@
     <li data-bind="css: $index()%2==0 ? '' : 'timeline-inverted'">
         <a class="btn btn-warning timeline-badge"><i
                 data-bind="css: 'fa fa-database'"></i></a>
-        <div class="timeline-panel">
+        <div class="timeline-panel"  styl="box-shadow: 0 1px 6px 4px rgba(0, 0, 0, 0.175)">
             <div class="timeline-heading">
                 <p data-bind="text:jobTitle" style="display:inline; font-weight:900"></p>,
                 <p style="display:inline; font-weight:700" data-bind="html: company"></p>
