--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.175); padding-bottom:45px" >
         <div class="row">
             <div class="page-header" style="margin-left:20px"><h1> | About Us</h1></div>
-            <div class="col-md-6" style="margin-left:20px" >
+            <div class="col-md-6" style="margin-left:20px;margin-right:10px" >
                 <h2>Encomium</h2>
                 <p>
                     Encomium, the intercollegiate annual techno-cultural fest of IEEE JMI chapter is an event with plethora
@@ -185,7 +185,7 @@
 					of our annual extravaganza.
                 </p>
             </div>
-            <div class="col-md-5 col-md-offset-1" style="margin-left:0px; margin-right:0px; box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.175)" >
+            <div class="col-md-5 col-md-offset-1" style="margin-left:10px; margin-right:10px; box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.175)" >
                 <h2>Areas of Interests</h2>
                 <ul>
                     <li>Social Network Analysis</li>
