--- a/index.html
+++ b/index.html
@@ -175,25 +175,23 @@
             <div class="page-header" style="margin-left:20px"><h1> | About Us</h1></div>
             <div class="col-md-6" style="margin-left:20px;margin-right:10px" >
                 <h2>Encomium</h2>
-                <p>
+                <p style="text-align:justify">
                     Encomium, the intercollegiate annual techno-cultural fest of IEEE JMI chapter is an event with plethora
 					of competitions lined up for participants. As the years progressed, it's dynamism and quest for perfection has
 					attracted enthusiasts in large numbers.
                 </p>
-                <p>
+                <p style="text-align:justify">
                     After our massive success last year, we are back, bigger, better and bolder, and we invite you to be a part 
 					of our annual extravaganza.
                 </p>
             </div>
             <div class="col-md-5 col-md-offset-1" style="margin-left:10px; margin-right:10px; box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.175)" >
-                <h2>Areas of Interests</h2>
-                <ul>
-                    <li>Social Network Analysis</li>
-                    <li>Natural Language Processing</li>
-                    <li>Deep Learning</li>
-                    <li>Computer Vision</li>
-					<li>Machine learning</li>
-                </ul>
+                <h2>IEEE JMI</h2>
+                 <p style="text-align:justify">IEEE, Student branch, Jamia Millia Islamia, instituted twenty-five years ago in 1992, is one of most active
+				    technical societies in India today. It was one of the first student branches to be commissioned under the 
+					Delhi section. It forms an important part of the curriculum in engineering education and it's vitality is 
+					marked bridge it acts as, between students and professionals.
+					</p>
             </div>
         </div>
     </div>
