--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					of our annual extravaganza.
                 </p>
             </div>
-            <div class="col-md-5 col-md-offset-1" style="margin-left:10px; margin-right:10px; box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.175)" >
+            <div class="col-md-5 col-md-offset-1" style="margin-left:10px; margin-right:10px; box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.175); padding-bottom:15px" >
                 <h2>IEEE JMI</h2>
                  <p style="text-align:justify">IEEE, Student branch, Jamia Millia Islamia, instituted twenty-five years ago in 1992, is one of most active
 				    technical societies in India today. It was one of the first student branches to be commissioned under the 
