--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="row">
             <div class="page-header" style="margin-left:20px"><h1> | About Us</h1></div>
             <div class="col-md-6" style="margin-left:20px;margin-right:10px" >
-                <h2>Encomium</h2>
+                <h2>ENCOMIUM</h2>
                 <p style="text-align:justify">
                     Encomium, the intercollegiate annual techno-cultural fest of IEEE JMI chapter is an event with plethora
 					of competitions lined up for participants. As the years progressed, it's dynamism and quest for perfection has
@@ -185,7 +185,7 @@
 					of our annual extravaganza.
                 </p>
             </div>
-            <div class="col-md-5 col-md-offset-1" style="margin-left:10px; margin-right:10px; box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.175); padding-bottom:15px" >
+            <div class="col-md-5 col-md-offset-1" style="margin-left:10px; margin-right:10px; box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.175); padding-bottom:15spx" >
                 <h2>IEEE JMI</h2>
                  <p style="text-align:justify">IEEE, Student branch, Jamia Millia Islamia, instituted twenty-five years ago in 1992, is one of most active
 				    technical societies in India today. It was one of the first student branches to be commissioned under the 
