--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="row">
             <div class="page-header" style="margin-left:20px"><h1> | About Us</h1></div>
             <div class="col-md-6" style="margin-left:20px;margin-right:10px" >
-                <h2>ENCOMIUM</h2>
+                <h2><b>ENCOMIUM</b></h2>
                 <p style="text-align:justify">
                     Encomium, the intercollegiate annual techno-cultural fest of IEEE JMI chapter is an event with plethora
 					of competitions lined up for participants. As the years progressed, it's dynamism and quest for perfection has
