--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                  <p style="text-align:justify">IEEE, Student branch, Jamia Millia Islamia, instituted twenty-five years ago in 1992, is one of most active
 				    technical societies in India today. It was one of the first student branches to be commissioned under the 
 					Delhi section. It forms an important part of the curriculum in engineering education and it's vitality is 
-					marked bridge it acts as, between students and professionals.
+					marked by the bridge it acts as, between students and professionals.
 					</p>
             </div>
         </div>
