--- a/sponsor_connect.html
+++ b/sponsor_connect.html
@@ -54,7 +54,10 @@
           <p class="text-gray-dark-2 xs-text-extra-large title-small">
             Give us a call or drop by an email, and let's connect!
           </p>
-		  <p><i><b>Sponsors Welcome till 20th March/18</b></i>
+		  <p>Or</p>
+		  <a href="./index.html"><b>Simply fill this up and we'll contact you asap!</b></a>
+		  <br></br>
+		  
 		  </p>
           <br>
           <div class="row">
@@ -75,7 +78,10 @@
             <!-- //.display-inline-block -->
           </div>
           <!-- //.row -->
+		  <br></br>
 		  
+		  <p><i><b>(Sponsors Welcome till 20th March/18)</b></i>
+		  </div>
 </body>
 
 </html>		  
