--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -262,31 +262,10 @@
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 text-center">
           <h3 class="display-block font-weight-300 letter-spacing-1 xs-title-small title-large">
-            Looking for sponsorship opportunities at TEDx JMI?
+            Looking for sponsorship opportunities at ENCOMIUM 2k18 ?
           </h3>
           <br>
-          <p class="text-gray-dark-2 xs-text-extra-large title-small">
-            Drop us an e-mail or give us a call, and let's talk!
-          </p>
-          <br>
-          <div class="row">
-            <div class="col-xs-12 col-sm-6 display-inline-block">
-              <i class="fa fa-envelope-o display-block text-base-color title-extra-large"></i>
-              <span class="display-block margin-5 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-extra-large title-small">
-                tedxjmi2017@gmail.com
-              </span>
-            </div>
-            <!-- //.display-inline-block -->
-
-            <div class="col-xs-12 col-sm-6 display-inline-block xs-margin-12 xs-no-margin-rl xs-no-margin-bottom">
-              <i class="fa fa-phone display-block text-base-color title-extra-large"></i>
-              <span class="display-block margin-5 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-extra-large title-small">
-                +91 990 534 4182
-              </span>
-            </div>
-            <!-- //.display-inline-block -->
-          </div>
-          <!-- //.row -->
+           <a href="../sponsor_connect.html" style="font-size:30px"><b>Come Here</b></a>
         </div>
         <!-- //.col-sm-10 .col-md-8 -->
       </div>
