--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <link href="css/academic.css" rel="stylesheet">
     <link href="css/skills.css" rel="stylesheet">
     <link href="css/timeline.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
+	
     <script type="application/ld+json">
 			{
 				"@context": "http://www.schema.org",
@@ -196,6 +198,65 @@
         </div>
     </div>
 </div>
+
+
+
+<section id="detail" class="parallax-section" style="background-position: 50% -170px; background-color:black ;padding-top:40px; padding-bottom:40px">
+	<div class="container">
+		<div class="row">
+
+			<div class="wow fadeInLeft col-md-4 col-sm-4 animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
+				<i class="fa fa-group"></i>
+				<h3>70,000+ Footfall</h3>
+				<p>With people stepping in from the entire DELHI and the North India DTU is flooded with performers, enthusiasts and spectators to witness this flabbergasting fest. We don’t believe in bragging but a fest is a fest by the crowd it gathers and we stand high with 70,000+ head count last year.</p>
+			</div>
+
+			<div class="wow fadeInUp col-md-4 col-sm-4 animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
+				<i class="fa fa-calendar"></i>
+				<h3>50+ Events</h3>
+				<p style="text-align: center">DANCE. DRAMA. LITERATURE. MUSIC. You name it, we have it. From competitions between enthusiastic participants to engaging the crowd, ENGIFEST promises all. We have tie up with EMBASSIES and programs featuring international artists which are sure to get you stunned.</p>
+			</div>
+
+			<div class="wow fadeInRight col-md-4 col-sm-4 animated" data-wow-delay="0.9s" style="visibility: visible; animation-delay: 0.9s; animation-name: fadeInRight;">
+				<i class="fa fa-microphone"></i>
+				<h3>3 Pro Nights</h3>
+				<p>With the likes of SUNIDHI CHAUHAN, LAGORI and NUCLEYA added to its name, ENGIFEST promises for yet another dumbfounding line up. We deliver what we promise and this year too ENGIFEST would repeat history with its star nights.</p>
+			</div>
+
+		</div>
+	</div>
+</section>
+
+
+
+
+<section id="video" class="parallax-section" style="background-position: 50% -58px; padding-top:20px; padding-bottom:20px; ">
+	<div class="container">
+		<div class="row">
+
+			<div class="wow fadeInUp col-md-6 col-sm-10 animated" data-wow-delay="1.3s" style="visibility: visible; animation-delay: 1.3s; animation-name: fadeInUp;">
+				<h2 style="font-size:45px">Watch Engifest 17 Official Aftermovie</h2>
+				<h3 style="font-size: 20px">From the tears and struggles of the organizers to the smiles and laughter all around during the events to the crows thronging the smashing concerts, this movie has it all!</h3>
+				<p style="font-size: 25px"><i>All set to relive Engifest all over again?</i></p>
+			</div>
+			<div class="wow fadeInUp col-md-6 col-sm-10, desktop-only animated" data-wow-delay="1.6s" style="visibility: visible; animation-delay: 1.6s; animation-name: fadeInUp;">
+				<div class="embed-responsive embed-responsive-16by9">
+					<!--<iframe class="embed-responsive-item" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fengifest%2Fvideos%2F1355853927873650%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>-->
+
+						<iframe height="100%" class="embed-responsive-item" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fengifest%2Fvideos%2F1355853927873650%2F&amp;show_text=0&amp;width=560" allowfullscreen=""></iframe>
+
+				</div>
+
+
+
+			</div>
+		
+
+		
+
+		</div>
+	</div>
+</section>
 
 
 
