--- a/sponsor_connect.html
+++ b/sponsor_connect.html
@@ -55,7 +55,7 @@
             Give us a call or drop by an email, and let's connect!
           </p>
 		  <p>Or</p>
-		  <a href="./index.html"><b>Simply fill this up and we'll contact you asap!</b></a>
+		  <a href="./index.html"  style="font-size:20px"><b>Simply fill this up and we'll contact you asap!</b></a>
 		  <br></br>
 		  
 		  </p>
