--- a/index.html
+++ b/index.html
@@ -205,19 +205,19 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="wow fadeInLeft col-md-4 col-sm-4 animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
+			<div class="wow fadeInLeft col-md-4 col-sm-4 animated" data-wow-delay="0.3s" style="visibility: visible; text-align:center; animation-delay: 0.3s; animation-name: fadeInLeft;">
 				<i class="fa fa-group"></i>
 				<h3>70,000+ Footfall</h3>
 				<p>With people stepping in from the entire DELHI and the North India DTU is flooded with performers, enthusiasts and spectators to witness this flabbergasting fest. We don’t believe in bragging but a fest is a fest by the crowd it gathers and we stand high with 70,000+ head count last year.</p>
 			</div>
 
-			<div class="wow fadeInUp col-md-4 col-sm-4 animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
+			<div class="wow fadeInUp col-md-4 col-sm-4 animated" data-wow-delay="0.6s" style="visibility: visible; text-align:center; animation-delay: 0.6s; animation-name: fadeInUp;">
 				<i class="fa fa-calendar"></i>
 				<h3>50+ Events</h3>
 				<p style="text-align: center">DANCE. DRAMA. LITERATURE. MUSIC. You name it, we have it. From competitions between enthusiastic participants to engaging the crowd, ENGIFEST promises all. We have tie up with EMBASSIES and programs featuring international artists which are sure to get you stunned.</p>
 			</div>
 
-			<div class="wow fadeInRight col-md-4 col-sm-4 animated" data-wow-delay="0.9s" style="visibility: visible; animation-delay: 0.9s; animation-name: fadeInRight;">
+			<div class="wow fadeInRight col-md-4 col-sm-4 animated" data-wow-delay="0.9s" style="visibility: visible;animation-delay: 0.9s;  text-align:center; animation-name: fadeInRight;">
 				<i class="fa fa-microphone"></i>
 				<h3>3 Pro Nights</h3>
 				<p>With the likes of SUNIDHI CHAUHAN, LAGORI and NUCLEYA added to its name, ENGIFEST promises for yet another dumbfounding line up. We deliver what we promise and this year too ENGIFEST would repeat history with its star nights.</p>
