--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 <div id="aboutMe">
     <div class="container"  style="background-color:white;
-            box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.175); padding-bottom:45px" >
+            box-shadow: 0 1px 6px 5px rgba(0, 0, 0, 0.175); padding-bottom:45px" >
         <div class="row">
             <div class="page-header" style="margin-left:20px"><h1> | About Us</h1></div>
             <div class="col-md-6" style="margin-left:20px;margin-right:10px" >
@@ -187,7 +187,7 @@
 					of our annual extravaganza.
                 </p>
             </div>
-            <div class="col-md-5 col-md-offset-1" style="margin-left:10px; margin-right:10px; box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.175); padding-top:13px; padding-bottom:20px" >
+            <div class="col-md-5 col-md-offset-1" style="margin-left:10px; margin-right:10px; box-shadow: 0 1px 6px 5px rgba(0, 0, 0, 0.175); padding-top:13px; padding-bottom:20px" >
                 <h2>IEEE JMI</h2>
                  <p style="text-align:justify">IEEE, Student branch, Jamia Millia Islamia, instituted twenty-five years ago in 1992, is one of most active
 				    technical societies in India today. It was one of the first student branches to be commissioned under the 
@@ -235,15 +235,15 @@
 		<div class="row">
 
 			<div class="wow fadeInUp col-md-6 col-sm-10 animated" data-wow-delay="1.3s" style="visibility: visible; animation-delay: 1.3s; animation-name: fadeInUp;">
-				<h2 style="font-size:45px">Watch Engifest 17 Official Aftermovie</h2>
-				<h3 style="font-size: 20px">From the tears and struggles of the organizers to the smiles and laughter all around during the events to the crows thronging the smashing concerts, this movie has it all!</h3>
-				<p style="font-size: 25px"><i>All set to relive Engifest all over again?</i></p>
+				<h2 style="font-size:45px">Watch Encomium 2k18 Invitation clip</h2>
+				<h3 style="font-size: 20px">We are back and excited to invite you to be a part of this!</h3>
+				<p style="font-size: 25px"><i>All set to relive Encomium all over again?</i></p>
 			</div>
-			<div class="wow fadeInUp col-md-6 col-sm-10, desktop-only animated" data-wow-delay="1.6s" style="visibility: visible; animation-delay: 1.6s; animation-name: fadeInUp;">
-				<div class="embed-responsive embed-responsive-16by9">
+			<div class="wow fadeInUp col-md-6 col-sm-10, desktop-only animated"   data-wow-delay="1.6s" style="visibility: visible; animation-delay: 1.6s; animation-name: fadeInUp;">
+				<div class="embed-responsive embed-responsive-16by9" >
 					<!--<iframe class="embed-responsive-item" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fengifest%2Fvideos%2F1355853927873650%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>-->
 
-						<iframe height="100%" class="embed-responsive-item" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fengifest%2Fvideos%2F1355853927873650%2F&amp;show_text=0&amp;width=560" allowfullscreen=""></iframe>
+						<iframe height="100%" class="embed-responsive-item" src="img/video.mp4" allowfullscreen=""></iframe>
 
 				</div>
 
