--- a/index.html
+++ b/index.html
@@ -207,20 +207,20 @@
 
 			<div class="wow fadeInLeft col-md-4 col-sm-4 animated" data-wow-delay="0.3s" style="visibility: visible; text-align:center; animation-delay: 0.3s; animation-name: fadeInLeft;">
 				<i class="fa fa-group"></i>
-				<h3>70,000+ Footfall</h3>
-				<p>With people stepping in from the entire DELHI and the North India DTU is flooded with performers, enthusiasts and spectators to witness this flabbergasting fest. We don’t believe in bragging but a fest is a fest by the crowd it gathers and we stand high with 70,000+ head count last year.</p>
+				<h3>7000+ Footfall</h3>
+				<p>With people stepping in from the entire DELHI, JMI is flooded with performers, enthusiasts and spectators to witness this flabbergasting fest. We don’t believe in bragging but a fest is a fest by the crowd it gathers and we stand high with 7000+ head count last year.</p>
 			</div>
 
 			<div class="wow fadeInUp col-md-4 col-sm-4 animated" data-wow-delay="0.6s" style="visibility: visible; text-align:center; animation-delay: 0.6s; animation-name: fadeInUp;">
 				<i class="fa fa-calendar"></i>
-				<h3>50+ Events</h3>
-				<p style="text-align: center">DANCE. DRAMA. LITERATURE. MUSIC. You name it, we have it. From competitions between enthusiastic participants to engaging the crowd, ENGIFEST promises all. We have tie up with EMBASSIES and programs featuring international artists which are sure to get you stunned.</p>
+				<h3>25+ Events</h3>
+				<p style="text-align: center">DANCE. DRAMA. LITERATURE. MUSIC. You name it, we have it. From competitions between enthusiastic participants to engaging the crowd, ENCOMIUM fest promises all. We have programs featuring artists which are sure to get you stunned.</p>
 			</div>
 
 			<div class="wow fadeInRight col-md-4 col-sm-4 animated" data-wow-delay="0.9s" style="visibility: visible;animation-delay: 0.9s;  text-align:center; animation-name: fadeInRight;">
-				<i class="fa fa-microphone"></i>
-				<h3>3 Pro Nights</h3>
-				<p>With the likes of SUNIDHI CHAUHAN, LAGORI and NUCLEYA added to its name, ENGIFEST promises for yet another dumbfounding line up. We deliver what we promise and this year too ENGIFEST would repeat history with its star nights.</p>
+				<i class="fa fa-database"></i>
+				<h3>25+ Sponsors</h3>
+				<p>With more than 25 sponsors this year, we are confident to deliver what we promise and this year too ENCOMIUM would repeat history with its star events.</p>
 			</div>
 
 		</div>
@@ -390,7 +390,7 @@
 <script id="workExp-template" type="text/html">
     <li data-bind="css: $index()%2==0 ? '' : 'timeline-inverted'">
         <a class="btn btn-warning timeline-badge"><i
-                data-bind="css: 'fa fa-database'"></i></a>
+                data-bind="css: 'fa fa-calendar'"></i></a>
         <div class="timeline-panel"  styl="box-shadow: 0 1px 6px 4px rgba(0, 0, 0, 0.175)">
             <div class="timeline-heading">
                 <p data-bind="text:jobTitle" style="display:inline; font-weight:900"></p>,
